fix: toolbox scrollbar y 노출

--- a/common/components/toolbox3/scss/_toolbox.scss
+++ b/common/components/toolbox3/scss/_toolbox.scss
@@ -130,6 +130,7 @@ $toolbox: (
 
     padding: 0 24px;
 
-    overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: auto;
   }
 }
