--- a/viewer/css/index.css
+++ b/viewer/css/index.css
@@ -330,7 +330,8 @@ img {
   width: 100%;
   height: 100%;
   padding: 0 24px;
-  overflow: scroll;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 .irm-sticky-menu {
